--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Paddle 15143
-email: drew.cox@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Paddle 15143 is a community organization that promotes the sport of platform tennis (aka: paddle)
+  in the Sewickley area. We are committed to providing a safe, fun, and supportive environment for all of our members,
+  regardless of their ability or style.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
